bk_ida/gccida/c0/print_spaces
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_spaces/src/dwarf2out.c:5630:41: error: use of undeclared identifier 'arg0'
fprintf( outfile, "%*s", print_indent, &arg0); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_spaces/src/obj/dwarf2out.o] Error 1
